mobile unfriendly layouting

--- a/template/scripts.html
+++ b/template/scripts.html
@@ -1,12 +1,14 @@
 <% include ./vendor/js.html %>
 <script type="text/javascript">
   $(function() {
-    $("[data-sticky_column]").stick_in_parent({
-      parent: "[data-sticky_parent]"
-    });
-    $("[data-sticky]").stick_in_parent({
-      sticky_class: "is_stuck_above_all"
-    });
+    if($(window).width() > 960+450) {
+      $("[data-sticky_column]").stick_in_parent({
+        parent: "[data-sticky_parent]"
+      });
+      $("[data-sticky]").stick_in_parent({
+        sticky_class: "is_stuck_above_all"
+      });
+    }
     $(".toggleComments").click(function(e){
       var value = $(this).attr("data-target")
       var $comments = $(".comments[data-target="+value+"]")
