--- a/template/styles.html
+++ b/template/styles.html
@@ -21,17 +21,27 @@
     text-decoration: none;
   }
 
+  section {
+    overflow-x: scroll;
+  }
+
+  .mini-toc {
+    width: 350px;
+    float: left;
+    margin-right: 10px;
+  }
+
+  .actions {
+    float: left;
+    max-width: 960px;
+  }
+
   article {
-    margin: 0 auto;
     margin-bottom: 10px;
-    width: 960px;
     padding: 50px;
     background-color: #fefefe;
     border: 1px solid grey;
     border-radius: 5px;
-  }
-  .actions {
-    float: left;
   }
   .action {
     
@@ -41,12 +51,6 @@
   }
   .action .url {
     font-size: 1.5em;
-  }
-
-  .mini-toc {
-    width: 350px;
-    float: left;
-    margin-right: 10px;
   }
   
   #topBtn {
