changed dna structure, add support for generating automagically documentation by intercepting request/responses at runtime, release 0.1.0

--- a/template/styles.html
+++ b/template/styles.html
@@ -26,14 +26,14 @@
   }
 
   .mini-toc {
-    width: 350px;
+    min-width: 350px;
     float: left;
     margin-right: 10px;
   }
 
   .actions {
     float: left;
-    max-width: 960px;
+    min-width: 960px;
   }
 
   article {
