preliminary impl. of 0.2.0

--- a/template/styles.html
+++ b/template/styles.html
@@ -64,4 +64,14 @@
   .is_stuck_above_all {
     z-index: 1000;
   }
+  
+  .metadata {
+    max-width: 960px;
+  }
+  .comments {
+    max-width: 960px;
+  }
+  .source {
+    max-width: 960px;
+  }
 </style>
